drag component set up and testing

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
+html, .root-element{
+  height: 100%;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  color: #172b4d;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+
+  background-color: #f4f5f7;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  height: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+.droppable-el{
+  margin: 10px;
+  background-color: aquamarine;
+  height: 150px;
+}
+
+.draggable-el{
+  margin: 10px;
+  background-color: burlywood;
+  padding: 5px;
 }
