drag and grop working fine with hooks

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ code {
 }
 
 
-.droppable-el{
+/* .droppable-el{
   margin: 10px;
   background-color: aquamarine;
   height: 150px;
@@ -38,4 +38,5 @@ code {
   margin: 10px;
   background-color: burlywood;
   padding: 5px;
-}
+} */
+
