--- a/src/App.css
+++ b/src/App.css
@@ -63,9 +63,34 @@
 
 /* Drag and drop */
 .invisible{
-  display: none;
+  /*  display: none; */
+  opacity : 0;
+  visibility: none;
+  box-shadow: none;
 }
 
 .hold{
-  border: 3px solid red;
+  background-color: transparent;
+}
+
+.hold > .card-container {
+  transform: rotate(5deg);
+}
+
+.hovered{
+  border: dashed 3px red;
+}
+
+
+
+.add-btn{
+  width: 100%;
+  height: 30px;
+  background-color: tomato;
+  cursor: pointer;
+}
+
+.text{
+  padding: 10px 10px;
+  width: 91%;
 }
