--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 $theme-color: #ffd868;
+$secondary-theme-color: #dee3e2;
 $card-container-color: #faf4f4;
 $element-border-radius: 4px;
 $element-box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
@@ -6,7 +7,7 @@ $element-box-shadow-hovered: 2px 2px 4px rgba(0, 0, 0, 0.2);
 $button-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 $button-box-shadow-hovered: 1px 1px 4px rgba(0, 0, 0, 0.2);
 
-.mb-1{
+.mb-1 {
   margin-bottom: 10px;
 }
 
@@ -44,6 +45,14 @@ $button-box-shadow-hovered: 1px 1px 4px rgba(0, 0, 0, 0.2);
       background-color: darken($theme-color, 20);
     }
   }
+
+  &-secondary {
+    background-color: darken($secondary-theme-color, 10);
+
+    &:hover {
+      background-color: darken($secondary-theme-color, 20);
+    }
+  }
 }
 
 .text-area {
@@ -55,7 +64,7 @@ $button-box-shadow-hovered: 1px 1px 4px rgba(0, 0, 0, 0.2);
   transition: box-shadow, background-color ease 0.35s;
   resize: none;
   border-radius: $element-border-radius;
-  height:20px;
+  height: 20px;
 
   font-size: 18px;
   font-weight: 600;
@@ -63,13 +72,14 @@ $button-box-shadow-hovered: 1px 1px 4px rgba(0, 0, 0, 0.2);
   width: 90%;
   padding: 10px 5%;
 
-
-  &__header {
-  }
-
-  &:focus, &:active{
+  &:focus,
+  &:active {
     background-color: rgba(255, 255, 255, 1);
     @include box-shadow($button-box-shadow-hovered);
+  }
+
+  &__fixed {
+    height: auto;
   }
 }
 
@@ -84,7 +94,7 @@ input {
   }
 }
 
-.danger{
+.danger {
   box-shadow: 2px 2px 4px rgba(228, 9, 9, 0.2);
 }
 
@@ -97,14 +107,53 @@ input {
   @include box-shadow($element-box-shadow);
   transition: background-color, box-shadow ease 0.35s;
 
-  &:hover, &.active{
+  &:hover,
+  &.active {
     background-color: #f4f4f4;
     @include box-shadow($element-box-shadow-hovered);
   }
 }
 
-.box{
+.box {
   overflow: hidden;
+
+  &-body {
+    border-top: 1px solid rgba(0, 0, 0, 0.08);
+    padding-top: 5px;
+    letter-spacing: 0.5px;
+  }
+  .priority-box {
+    height: 3px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    &.red {
+      background-color: tomato;
+    }
+
+    &.yellow{
+      background-color: #ffe75e;
+    }
+
+    &.green{
+      background-color: #baf1a1;
+    }
+
+    &.none{
+      display: none;
+    }
+  }
+  h3 {
+    margin-bottom: 5px;
+  }
+}
+
+h2,
+h3 {
+  margin: 0 0 20px 0;
+  letter-spacing: 0.5px;
 }
 
 /* Page and Element styling */
@@ -121,6 +170,24 @@ input {
     background-color: rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     @include box-shadow(0px 3px 5px -3px rgba(0, 0, 0, 0.12));
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &-logo,
+    &-actions {
+      display: flex;
+      align-items: center;
+      img {
+        height: 30px;
+        margin-right: 10px;
+      }
+      label,
+      span {
+        margin-right: 10px;
+      }
+    }
   }
 }
 
@@ -175,40 +242,33 @@ input {
 
   &__header {
     display: flex;
-    margin-bottom: 10px;
     padding-bottom: 10px;
-    border-bottom: 1px solid rgba(0,0,0,0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+
+    .delete-card {
+      cursor: pointer;
+
+      img {
+        height: 15px;
+        transition: height ease 0.35s;
+        &:hover {
+          height: 18px;
+        }
+      }
+    }
   }
 }
 
-.card-dragable{
+.card-dragable {
   @extend .card-style;
   margin: 10px 0;
   background-color: #ffffff;
+  position: relative;
+  overflow: hidden;
 }
 
 .card-column {
   overflow-y: auto;
-}
-
-/* Drag and drop */
-.invisible {
-  /*  display: none; */
-  opacity: 0;
-  visibility: none;
-  box-shadow: none;
-}
-
-.hold {
-  background-color: transparent;
-}
-
-.hold > .card-container {
-  transform: rotate(5deg);
-}
-
-.hovered {
-  border: dashed 3px red;
 }
 
 .add-item-controller {
@@ -218,12 +278,12 @@ input {
   padding: 0;
   width: 100%;
 
-  .column-form{
+  .column-form {
     padding: 10px 5%;
   }
 
-  textarea{
-    border: 1px solid rgba(0,0,0,0.05);
+  textarea {
+    border: 1px solid rgba(0, 0, 0, 0.05);
     display: block;
     background-color: #fcfcfc;
   }
@@ -240,8 +300,186 @@ input {
 
     &:hover {
       background-color: rgba(255, 255, 255, 0.3);
-      
     }
   }
 }
 
+/* Drag and drop */
+.invisible {
+  opacity: 0;
+  visibility: none;
+  box-shadow: none;
+}
+
+.hold {
+  background-color: transparent;
+}
+
+.hovered {
+  border: dashed 1px red;
+}
+
+/* css for switch component */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 46px;
+  height: 25px;
+  border-radius: $element-border-radius;
+  overflow: hidden;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider,
+.priority {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  margin: 0 !important;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 17px;
+  width: 17px;
+  left: 7px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: $element-border-radius;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #00bdaa;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #00bdaa;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(15px);
+  -ms-transform: translateX(15px);
+  transform: translateX(15px);
+}
+
+.priority {
+  &.red {
+    background-color: tomato;
+    border: 2px solid darken(tomato, 10);
+
+    &:hover {
+      border: 2px solid darken(tomato, 30);
+    }
+  }
+  &.yellow {
+    background-color: yellow;
+    border: 2px solid darken(yellow, 10);
+    &:hover {
+      border: 2px solid darken(yellow, 30);
+    }
+  }
+  &.green {
+    background-color: #baf1a1;
+    border: 2px solid darken(#baf1a1, 10);
+    &:hover {
+      border: 2px solid darken(#baf1a1, 30);
+    }
+  }
+  &.none {
+    background-color: #ffffff;
+    border: 2px solid darken(rgb(164, 164, 164), 10);
+    &:hover {
+      border: 2px solid darken(rgb(164, 164, 164), 30);
+    }
+  }
+}
+
+input:checked + .priority {
+  &.red {
+    border: 2px solid darken(tomato, 30);
+  }
+  &.yellow {
+    border: 2px solid darken(yellow, 30);
+  }
+  &.green {
+    border: 2px solid darken(#baf1a1, 30);
+  }
+  &.none {
+    border: 2px solid darken(rgb(164, 164, 164), 30);
+  }
+}
+
+/* react modal */
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 350ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.ReactModal__Content {
+  width: 600px;
+  max-height: 350px;
+  margin: auto;
+}
+
+.modal-content {
+  width: 100%;
+  position: relative;
+  height: 100%;
+
+  .btn-container {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+
+    .btn {
+      margin-left: 10px;
+    }
+  }
+
+  textarea {
+    width: 96%;
+    padding: 10px 2%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    font-size: 16px;
+
+    &.text-area__fixed {
+      font-weight: 400;
+    }
+  }
+
+  h3 {
+    margin-bottom: 10px;
+  }
+
+  .priority-container {
+    display: flex;
+    align-items: center;
+    label,
+    span {
+      margin-right: 10px;
+    }
+  }
+}
