--- a/src/App.scss
+++ b/src/App.scss
@@ -55,7 +55,7 @@ $button-box-shadow-hovered: 1px 1px 4px rgba(0, 0, 0, 0.2);
     }
   }
 
-  &-danger{
+  &-danger {
     background-color: darken($danger-theme-color, 10);
     color: #ffffff;
 
@@ -75,9 +75,10 @@ $button-box-shadow-hovered: 1px 1px 4px rgba(0, 0, 0, 0.2);
   resize: none;
   border-radius: $element-border-radius;
   height: 20px;
-
+  font-family: sans-serif;
+  font-weight: 500;
+  letter-spacing: 0.5px;
   font-size: 18px;
-  font-weight: 600;
 
   width: 90%;
   padding: 10px 5%;
@@ -143,15 +144,23 @@ input {
       background-color: tomato;
     }
 
-    &.yellow{
+    &.yellow {
       background-color: #ffe75e;
     }
 
-    &.green{
+    &.green {
       background-color: #baf1a1;
     }
 
-    &.none{
+    &.pink {
+      background-color: #efa8e4;
+    }
+    
+    &.blue {
+      background-color: #00bcd4;
+    }
+
+    &.none {
       display: none;
     }
   }
@@ -200,10 +209,10 @@ h3 {
       }
     }
 
-    .reset{
+    .reset {
       cursor: pointer;
       transition: color ease 0.35s;
-      &:hover{
+      &:hover {
         color: rgba(244, 0, 0, 0.8);
       }
     }
@@ -230,7 +239,7 @@ h3 {
 
   overflow-x: auto;
   overflow-y: hidden;
-  
+
   padding-left: 4px;
   padding-right: 4px;
   padding-bottom: 8px;
@@ -269,6 +278,8 @@ h3 {
 
     .delete-card {
       cursor: pointer;
+      margin-left: 5px;
+      margin-top: 5px;
 
       img {
         height: 15px;
@@ -350,6 +361,19 @@ h3 {
   height: 25px;
   border-radius: $element-border-radius;
   overflow: hidden;
+
+  &.rounded {
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    overflow: auto;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    transition: box-shadow ease 0.35s;
+
+    &:hover {
+      @include box-shadow($element-box-shadow);
+    }
+  }
 }
 
 .switch input {
@@ -402,47 +426,34 @@ input:checked + .slider:before {
 .priority {
   &.red {
     background-color: tomato;
-    border: 2px solid darken(tomato, 10);
-
-    &:hover {
-      border: 2px solid darken(tomato, 30);
-    }
   }
   &.yellow {
-    background-color: yellow;
-    border: 2px solid darken(yellow, 10);
-    &:hover {
-      border: 2px solid darken(yellow, 30);
-    }
+    background-color: #ffe75e;
   }
   &.green {
     background-color: #baf1a1;
-    border: 2px solid darken(#baf1a1, 10);
-    &:hover {
-      border: 2px solid darken(#baf1a1, 30);
-    }
   }
   &.none {
     background-color: #ffffff;
-    border: 2px solid darken(rgb(164, 164, 164), 10);
-    &:hover {
-      border: 2px solid darken(rgb(164, 164, 164), 30);
-    }
+  }
+  &.pink {
+    background-color: #efa8e4;
+  }
+  &.blue {
+    background-color: #00bcd4;
   }
 }
 
 input:checked + .priority {
-  &.red {
-    border: 2px solid darken(tomato, 30);
-  }
-  &.yellow {
-    border: 2px solid darken(yellow, 30);
-  }
-  &.green {
-    border: 2px solid darken(#baf1a1, 30);
-  }
-  &.none {
-    border: 2px solid darken(rgb(164, 164, 164), 30);
+  &::before {
+    content: "";
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 50%;
+    top: 3px;
+    left: 3px;
   }
 }
 
